--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -1,1 +1,9 @@
 include: package:flutter_lints/flutter.yaml
+
+linter:
+  rules:
+    avoid_print: false
+    prefer_relative_imports: true
+    prefer_single_quotes: true
+    sort_constructors_first: false
+    sort_unnamed_constructors_first: true
