--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
     sdk: flutter
   flutter_lints: ^6.0.0
   flutter_riverpod: ^3.0.0
+  flutter_svg: ^2.2.1
   riverpod_annotation: ^3.0.0
 
 dev_dependencies:
@@ -21,3 +22,8 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+
+  assets:
+    - assets/svgs/
+    - assets/svgs/map_assets/
+    - assets/svgs/provinces/
