--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: dr_map
 description: "A new Flutter project."
-publish_to: 'none'
+publish_to: "none"
 version: 0.1.0
 
 environment:
@@ -12,11 +12,15 @@ dependencies:
   flutter_lints: ^6.0.0
   flutter_riverpod: ^3.0.0
   flutter_svg: ^2.2.1
+  freezed: ^3.2.3
+  freezed_annotation: ^3.1.0
+  json_annotation: ^4.9.0
   riverpod_annotation: ^3.0.0
 
 dev_dependencies:
   build_runner:
   custom_lint:
+  json_serializable: ^6.11.1
   riverpod_generator: ^3.0.0
   riverpod_lint: ^3.0.0
 
