--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   flutter_svg: ^2.2.1
   freezed: ^3.2.3
   freezed_annotation: ^3.1.0
+  http: ^1.5.0
   json_annotation: ^4.9.0
   riverpod_annotation: ^3.0.0
 
