--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,10 @@ dependencies:
   json_annotation: ^4.9.0
   riverpod_annotation: ^3.0.0
 
+  flutter_localizations:
+    sdk: flutter
+  intl: ^0.20.2
+
 dev_dependencies:
   build_runner:
   custom_lint:
@@ -26,6 +30,8 @@ dev_dependencies:
   riverpod_lint: ^3.0.0
 
 flutter:
+  generate: true
+
   uses-material-design: true
 
   assets:
